--- a/index.html
+++ b/index.html
@@ -4871,7 +4871,7 @@
 				<div class="text-left" :class="getMainClass">
 					<br>
 					<div class="text-right padding-right">
-						<a type="button" class="btn btn-default btn-md" href="https://naver.com" target="_blank">
+						<a type="button" class="btn btn-default btn-md" href="https://github.com/vanilla-note/vanillanote.min" target="_blank">
 							<span class="glyphicon glyphicon-download-alt padding-right" aria-hidden="true"></span>{{ getIntroMainComment(1000) }}
 						</a>
 					</div>
