--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
 		outline: none!important;
 		box-shadow: none!important;
 	}
+	table {
+		overflow-wrap: break-word;
+		table-layout: fixed;
+	}
+	th td {
+		overflow:hidden;
+		white-space : nowrap;
+		text-overflow: ellipsis;
+	}
 	.dot {
 		display: inline-block;
 		margin: 0 10px;
