--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Noto+Sans+KR:wght@100;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
-	<script src="../js/biz/sc/VanillaNote.1.0.0.js?ver=202308030940"></script>
+	<script src="/Vanillanote.min.1.0.0.js?ver=202308030940"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 	<style>
 	/* Alphabet */
