--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Noto+Sans+KR:wght@100;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
-	<script src="/Vanillanote.min.1.0.0.js?ver=202308030940"></script>
+	<script src="/Vanillanote.min.1.0.0.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 	<style>
 	/* Alphabet */
@@ -29,6 +29,10 @@
 /* 		font-family: 'Roboto'; */
 /* 		unicode-range: U+0020-0040, U+005B-0060, U+007B-007F; /* Punctuation, Digits */ */
 /* 	} */
+	html, body {
+		max-width: 100%;
+		overflow-x: hidden;
+	}
 	body {
 		font-family: 'Georgia', 'Noto Sans KR', 'Roboto', sans-serif;
 		font-size: 1.2em;
@@ -4788,7 +4792,7 @@
 	};
 	</script>
 </head>
-<body style="overflow-y: auto;overflow-x: hidden;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;">
+<body style="width: 100%;overflow-y: auto;overflow-x: hidden;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;">
 	<div id="app">
 		<app-header
 		@on-location="onLocation"
