--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Vanillanote</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta name="apple-mobile-web-app-capable"content="yes"/>
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+	<title>Vanillanote</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Noto+Sans+KR:wght@100;600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Noto+Sans+KR:wght@300;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
 	<script src="/Vanillanote.min.1.0.0.js"></script>
@@ -29,18 +30,66 @@
 /* 		font-family: 'Roboto'; */
 /* 		unicode-range: U+0020-0040, U+005B-0060, U+007B-007F; /* Punctuation, Digits */ */
 /* 	} */
+	*, ::before, ::after {
+	    --tw-border-spacing-x: 0;
+	    --tw-border-spacing-y: 0;
+	    --tw-translate-x: 0;
+	    --tw-translate-y: 0;
+	    --tw-rotate: 0;
+	    --tw-skew-x: 0;
+	    --tw-skew-y: 0;
+	    --tw-scale-x: 1;
+	    --tw-scale-y: 1;
+	    --tw-pan-x: ;
+	    --tw-pan-y: ;
+	    --tw-pinch-zoom: ;
+	    --tw-scroll-snap-strictness: proximity;
+	    --tw-ordinal: ;
+	    --tw-slashed-zero: ;
+	    --tw-numeric-figure: ;
+	    --tw-numeric-spacing: ;
+	    --tw-numeric-fraction: ;
+	    --tw-ring-inset: ;
+	    --tw-ring-offset-width: 0px;
+	    --tw-ring-offset-color: #fff;
+	    --tw-ring-color: rgb(59 130 246 / 0.5);
+	    --tw-ring-offset-shadow: 0 0 #0000;
+	    --tw-ring-shadow: 0 0 #0000;
+	    --tw-shadow: 0 0 #0000;
+	    --tw-shadow-colored: 0 0 #0000;
+	    --tw-blur: ;
+	    --tw-brightness: ;
+	    --tw-contrast: ;
+	    --tw-grayscale: ;
+	    --tw-hue-rotate: ;
+	    --tw-invert: ;
+	    --tw-saturate: ;
+	    --tw-sepia: ;
+	    --tw-drop-shadow: ;
+	    --tw-backdrop-blur: ;
+	    --tw-backdrop-brightness: ;
+	    --tw-backdrop-contrast: ;
+	    --tw-backdrop-grayscale: ;
+	    --tw-backdrop-hue-rotate: ;
+	    --tw-backdrop-invert: ;
+	    --tw-backdrop-opacity: ;
+	    --tw-backdrop-saturate: ;
+	    --tw-backdrop-sepia: ;
+	    -webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+	}
 	html, body {
 		max-width: 100%;
 		overflow-x: hidden;
+	    border-width: 0;
 	}
 	body {
-		font-family: 'Georgia', 'Noto Sans KR', 'Roboto', sans-serif;
+		font-family: 'Noto Sans KR', sans-serif;
 		font-size: 1.2em;
 		overflow-y: auto;
 		overflow-x: hidden;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
+		-webkit-overflow-scrolling: touch;
 	}
 	@font-face {
 		font-family: 'Noto Sans KR';
@@ -4792,7 +4841,7 @@
 	};
 	</script>
 </head>
-<body style="width: 100%;overflow-y: auto;overflow-x: hidden;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;">
+<body>
 	<div id="app">
 		<app-header
 		@on-location="onLocation"
