--- a/index.html
+++ b/index.html
@@ -2255,6 +2255,7 @@
 	tempEl1.setAttribute('style','width: 100%;padding-right: 5px;position: absolute;bottom: 15px;z-index: 100;text-align: right;font-size: 0.8em;color: #003366;');
 	tempEl1.innerText = 'Photo credit:\nfrom Richard Horvath on Unsplash.';
 	vn.elements.placeholders[0].appendChild(tempEl1);
+	vn.elements.placeholders[0].style.padding = '0';
 };
 `,
 					"2104" : "3. document.getElementById 등으로 해당 element를 불러올 필요 없이, .elements를 활용하여 요소를 바로 가져올 수 있습니다."
@@ -3850,6 +3851,7 @@
 	tempEl1.setAttribute('style','width: 100%;padding-right: 5px;position: absolute;bottom: 15px;z-index: 100;text-align: right;font-size: 0.8em;color: #003366;');
 	tempEl1.innerText = 'Photo credit:\nfrom Richard Horvath on Unsplash.';
 	vn.elements.placeholders[0].appendChild(tempEl1);
+	vn.elements.placeholders[0].style.padding = '0';
 };
 `,
 					"2104" : "3. You can directly retrieve the element using .elements, without the need to call document.getElementById or similar."
@@ -7335,7 +7337,7 @@
 	        				vn.variables.useAutoScroll = (typeof window.orientation !== "undefined") || (navigator.userAgent.indexOf("IEMobile") !== -1);
 	        			} else if(vn.elements.textareas[1] === e.target) {
 	        				vn.variables.useAutoScroll = true;
-	        				vn.variables.mobileKeyboardHeight = '200';
+	        				vn.variables.mobileKeyboardExceptHeight = '200';
 	        			} else {
 	        				vn.variables.useAutoScroll = false;
 	        			}
@@ -8230,6 +8232,7 @@
 	    	        	tempEl1.innerText = this.isMobileSize ? 'Photo credit:\nfrom Marcel Strauß on Unsplash.' : 'Photo credit:\nfrom Richard Horvath on Unsplash.';
 	    	        	if(this.isMobileSize) tempEl1.style.fontSize = '0.6em';
 	    	        	vn.elements.placeholders[0].appendChild(tempEl1);
+	    	        	vn.elements.placeholders[0].style.padding = '0';
 	    	        	
 	    	        	if((typeof window.orientation !== "undefined") || (navigator.userAgent.indexOf("IEMobile") !== -1)) {
 	    	        		vn.variables.attFileMaxSizes[0] = 50 * 1024 * 1024;
