--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	}
 	.dot {
 		display: inline-block;
-		margin: 0 5px;
+		margin-right: 7px;
 	}
 	.note-box, .explain-box {
 		width: 70%;
@@ -215,10 +215,11 @@
 		font-weight: 300;
 	}
 	.h4 {
-		padding: 0 7px;
+		padding: 0 5px;
 		line-height: 1.5em;
 	}
 	.h5 {
+		padding: 0 8px;
 		font-size: 15px;
 		line-height: 1.5em;
 	}
