--- a/index.html
+++ b/index.html
@@ -7279,6 +7279,7 @@
 	        		this.vanillanote = getVanillanote();
 	        		let vn = this.vanillanote;
 	        		vn.variables.sizeRates[2] = 0.5;
+			    	vn.variables.loadInterval = 300;
 	        		vanillanote_onCreate(vn);
 	        		
 	        		vn.variables.useMobileActiveMode[1] = true;
