--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 	<meta name="apple-mobile-web-app-capable"content="yes"/>
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+	<meta property="og:url" content="https://vanilla-note.github.io/">
 	<title>Vanillanote</title>
+	<meta name="application-name" content="Vanillanote">
+	<meta name="msapplication-tooltip" content="Vanillanote">
+	<meta id="meta_og_title" property="og:title" content="Vanillanote(vanilla JS-only editor library)">
+	<meta name="description" content="A simple editor library using only Vanilla JS and ES5 syntax.">
+	<meta property="og:description" content="A simple editor library using only Vanilla JS and ES5 syntax.">
+	<meta property="og:type" content="website">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
@@ -641,7 +648,7 @@
 					"1463" : " Safari on IOS",
 					"1464" : "14",
 					"1465" : " Firefox for Android",
-					"1466" : "Mobile automatic height adjustment not available",
+					"1466" : "모바일 자동높이 조절 불가",
 					"1467" : " Opera Android",
 					"1468" : "48",
 					"1469" : " Samsung Internet",
