--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<title>Vanillanote</title>
 	<meta name="application-name" content="Vanillanote">
 	<meta name="msapplication-tooltip" content="Vanillanote">
-	<meta id="meta_og_title" property="og:title" content="Vanillanote(vanilla JS-only editor library)">
-	<meta name="description" content="A simple editor library using only Vanilla JS and ES5 syntax.">
-	<meta property="og:description" content="A simple editor library using only Vanilla JS and ES5 syntax.">
+	<meta id="meta_og_title" property="og:title" content="Vanillanote(only vanilla JS ES5)">
+	<meta name="description" content="A simple WYSIWYG editor library using only Vanilla JS and ES5 syntax.">
+	<meta property="og:description" content="A simple WYSIWYG editor library using only Vanilla JS and ES5 syntax.">
 	<meta property="og:type" content="website">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
