add textarea-height attribute text content.

--- a/index.html
+++ b/index.html
@@ -848,8 +848,8 @@
 					"1163" : attributes.textareaHeight.key,
 					"1164" : attributes.textareaMaxHeight.key,
 					"1166" : "css height",
-					"1167" : "textarea의 height를 정한다. Default값은 데스크탑 : 500px/ 모바일 : 350px.",
-					"1168" : "textarea의 max-height를 정한다. Default값은 900px.",
+					"1167" : "textarea의 height를 정한다. Default값은 데스크탑 : 500px/ 모바일 : 350px. height는 px단위로만 입력해야한다.(ex. 350px)",
+					"1168" : "textarea의 max-height를 정한다. Default값은 900px. height는 px단위로만 입력해야한다.(ex. 900px)",
 					"1169" : attributes.textareaHeight.key + '="350px"\n' + attributes.textareaMaxHeight.key + '="600px"',
 					"1180" : attributes.textareaHeightIsModify.key,
 					"1181" : "1. editor의 높이를 변경할 수 있는지를 제어한다.",
@@ -1282,8 +1282,8 @@
                     "1163": attributes.textareaHeight.key,
                     "1164": attributes.textareaMaxHeight.key,
                     "1166": "CSS Height",
-                    "1167": "Defines the textarea's height. Default value is Desktop: 500px/ Mobile: 350px.",
-                    "1168": "Defines the textarea's max-height. Default value is 900px.",
+                    "1167": "Defines the textarea's height. Default value is Desktop: 500px/ Mobile: 350px. Height must be entered only in px units.(ex 350px)",
+                    "1168": "Defines the textarea's max-height. Default value is 900px. Height must be entered only in px units.(ex 900px)",
                     "1169": attributes.textareaHeight.key + '="350px"\n' + attributes.textareaMaxHeight.key + '="600px"',
                     "1180": attributes.textareaHeightIsModify.key,
                     "1181": "1. Control whether the editor's height can be changed.",
