--- a/index.html
+++ b/index.html
@@ -1778,8 +1778,8 @@
 							+ " 두번째 파라메터값 으로 접근 할 수 있습니다. e : event, vn : Vanillanote Object",
 					"1213" : 
 `function vanillanote_onBeforeCreate(e, vn) {
-	cosnole.log(vn);
-	cosnole.log(vn.variables.isCreated);
+	console.log(vn);
+	console.log(vn.variables.isCreated);
 	//result :
 	//Vanillanote Object
 	//false
@@ -1792,8 +1792,8 @@
 `function someFuntion() {
 	const note = document.querySelectorAll('[data-vanillanote]')[idx];
 	const vn = note.getNote();
-	cosnole.log(vn);
-	cosnole.log(vn.variables.isCreated);
+	console.log(vn);
+	console.log(vn.variables.isCreated);
 	//result :
 	//Vanillanote Object
 	//true
@@ -3363,8 +3363,8 @@
 							+ " you can access it through the second parameter value. e: event, vn: Vanillanote Object",
 					"1213" : 
 `function vanillanote_onBeforeCreate(e, vn) {
-	cosnole.log(vn);
-	cosnole.log(vn.variables.isCreated);
+	console.log(vn);
+	console.log(vn.variables.isCreated);
 	//result :
 	//Vanillanote Object
 	//false
@@ -3377,8 +3377,8 @@
 `function someFuntion() {
 	const note = document.querySelectorAll('[data-vanillanote]')[idx];
 	const vn = note.getNote();
-	cosnole.log(vn);
-	cosnole.log(vn.variables.isCreated);
+	console.log(vn);
+	console.log(vn.variables.isCreated);
 	//result :
 	//Vanillanote Object
 	//true
