--- a/index.html
+++ b/index.html
@@ -825,11 +825,11 @@
 					"1051" : "npm i vanillanote",
 					"1052" :
 `//src/index.js
-import { getVanillanote, vanillanote_onCreate, vanillanote_onDestroy } from 'vanillanote';
+import { getVanillanote, createVanillanote, destroyVanillanote } from 'vanillanote';
 
 const vn = getVanillanote();
-vanillanote_onCreate(vn);
-//vanillanote_onDestroy(vn);
+createVanillanote(vn);
+//destroyVanillanote(vn);
 `,
 					"1053" : "그리고 html에 data-vanillanote div 를 추가합니다.",
 					
@@ -1270,11 +1270,11 @@ vanillanote_onCreate(vn);
 					"1051" : "npm i vanillanote",
 					"1052" :
 `//src/index.js
-import { getVanillanote, vanillanote_onCreate, vanillanote_onDestroy } from 'vanillanote';
+import { getVanillanote, createVanillanote, destroyVanillanote } from 'vanillanote';
 
 const vn = getVanillanote();
-vanillanote_onCreate(vn);
-//vanillanote_onDestroy(vn);
+createVanillanote(vn);
+//destroyVanillanote(vn);
 `,
 					"1053" : "And add the data-vanillanote div in html",
 
